[tool.poetry]
name = "ziphr"
version = "0.1.0"
description = ""
authors = ["kausthub-kannan <kausthubkannan961@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ezkl = "^11.0.11"
streamlit = "^1.34.0"
fastapi = "^0.111.0"
aiohttp = {extras = ["speedups"], version = "^3.9.5"}
sqlalchemy = "^2.0.30"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
